tests/samples/valid/opaque_structure_pointers.pn
struct Owner;

struct Handler
{
	owner: &Owner,
}

fn handle(owner: &Owner, handler: Handler);
