tests/samples/invalid/integer_too_big.pn
fn main()
{
	var x: u128 = 2138712987321987319321987317931831928173123871927312381723981723198;
}
